# juwavelet_awe

./: .gitignore  .gitlab-ci.yml  AUTHORS  README.md  pyproject.toml  requirements.txt  setup.cfg
Figures/SABER New Figures Nov 05/: 02Table_SABER_L2A_2024069_120710_02.08_S016x190_A00635_summary.csv  04Table_summary_overall_all_methods.csv
Figures/SABER Titus Oct 15/: OH_Statistics.xlsx  delta_T_vs_shifts.xlsx
Figures/SABER email Aug 27 2025/: matched_all_2024_FWHM_gaussian.csv  matched_all_2024_FWHM_gaussian.xlsx
Figures/SABER email Sep 05 2025/: 08_T_Weighted_Statistics__Updated_.csv
Figures/SABER email Sep 06 2025/: _Outliers_under_strict_criteria.csv
Figures/grid_runs/: sweep_summary_plot.py  threshold_sweep_space0_max20.csv  threshold_sweep_space0_max22.csv  threshold_sweep_space0_max24.csv  threshold_sweep_space0_max26.csv  threshold_sweep_space10_max20.csv  threshold_sweep_space10_max22.csv  threshold_sweep_space10_max24.csv  threshold_sweep_space10_max26.csv  threshold_sweep_space1_max20.csv  threshold_sweep_space1_max22.csv  threshold_sweep_space1_max24.csv  threshold_sweep_space1_max26.csv  threshold_sweep_space2_max20.csv  threshold_sweep_space2_max22.csv  threshold_sweep_space2_max24.csv  threshold_sweep_space2_max26.csv  threshold_sweep_space3_max20.csv  (+29 more)
doc/: index.rst
examples/: Segment2d_demo.ipynb  alima.npy  alima_synth.npy  alima_synth.txt  decompose1d.py  decompose2d.py  decompose3d.py  identify_clusters.py  separate2d.py  sst.py  stft.py  tapering.py  wavelet1d.py  wavelet2d.py
juwavelet/: __init__.py  fft.py  morlet.py
(+7 files in other folders)
